--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10848,3 +10848,35 @@ textarea.form-control-lg {
   grid-column: 1/4;
   grid-row: 1/9;
 }
+
+.trending {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(auto, 1fr));
+  grid-auto-rows: minmax(3, minmax(100px, 100px));
+  gap: 10px;
+}
+.trending .trending1 {
+  grid-row: 3/4;
+  max-height: 200px;
+}
+.trending .trending1:nth-of-type(1) {
+  max-height: 400px;
+  overflow: hidden;
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+.trending .trending1:nth-of-type(1) img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.trending .trending1:nth-of-type(1) .card-body {
+  box-shadow: inset 0 -10rem 70px #00000070;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #fff;
+}
+.trending .trending1:nth-of-type(1) .card-body .text-muted {
+  color: #fff !important;
+}
