--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -51,3 +51,34 @@ $danger: #ff4136;
         // }
     }
 }
+.trending {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(auto, 1fr));
+    grid-auto-rows: minmax(3, minmax(100px, 100px));
+    gap: 10px;
+    .trending1 {
+        grid-row: 3 / 4;
+        max-height: 200px;
+        &:nth-of-type(1) {
+            max-height: 400px;
+            overflow: hidden;
+            grid-row: 1/3;
+            grid-column: 1/3;
+            img {
+                object-fit: cover;
+            }
+
+            .card-body {
+                box-shadow: inset 0 -10rem 70px #00000070;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                color: #fff;
+                .text-muted {
+                    color: #fff !important;
+                }
+            }
+        }
+    }
+}
