fix: some issues fixed

--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -87,3 +87,42 @@ $danger: #ff4136;
 .card-link:hover {
     color: lighten($color: $primary, $amount: 10%) !important;
 }
+
+.img-card-link {
+    position: relative;
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #383cc170;
+        text-align: center;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+    &::after {
+        content: "Read More";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: #fff;
+        padding: 10px 20px;
+        border-radius: 20px;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        color: #000;
+    }
+}
+.card:hover {
+    .img-card-link {
+        &::before {
+            opacity: 1;
+        }
+        &::after {
+            opacity: 1;
+        }
+    }
+}
