updated and fixed some files

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10920,3 +10920,7 @@ textarea.form-control-lg {
 .card:hover .img-card-link::after {
   opacity: 1;
 }
+
+.notification::-webkit-scrollbar {
+  display: none;
+}
